Fix text overflow in mobile. Update placeholder for mobile.

--- a/part9/patientor/client/src/index.css
+++ b/part9/patientor/client/src/index.css
@@ -12,7 +12,12 @@ input[type="date"] {
 }
 
 .word-break {
-  word-break: break-all;
+  word-break: break-word;
+}
+
+.patient-list__table-cell--text-overflow {
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .patient-list__add-patient-btn-wrapper {
